Backbone of the task

--- a/package.json
+++ b/package.json
@@ -11,5 +11,7 @@
   "dependencies": {
     "socket.io": "^2.1.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint-plugin-node": "^7.0.1"
+  }
 }
